GNOME Bugzilla – Bug 678174
UI alignment fixes
Last modified: 2012-06-20 17:18:44 UTC
The scrolled window is not left-aligned with the close button, and the "Add account" label should be consistent with the User Accounts panel
Created attachment 216525 [details] [review] online-accounts: fix alignment with closing button
Created attachment 216526 [details] [review] online-accounts: make "Add Account" label bigger and centered So it's consistent with the User Accounts panel.
Review of attachment 216525 [details] [review]: ::: panels/online-accounts/cc-online-accounts-add-account-dialog.c @@ +254,3 @@ vbox = gtk_dialog_get_content_area (GTK_DIALOG (add_account)); + grid = gtk_grid_new (); + gtk_container_set_border_width (GTK_CONTAINER (grid), 5); Why 5?
Review of attachment 216526 [details] [review]: Looks good.
Attachment 216525 [details] pushed as b40c1fb - online-accounts: fix alignment with closing button Attachment 216526 [details] pushed as a1abae0 - online-accounts: make "Add Account" label bigger and centered
*** Bug 678160 has been marked as a duplicate of this bug. ***