online-accounts: fix alignment with closing button

https://bugzilla.gnome.org/show_bug.cgi?id=678174