panels/online-accounts/cc-online-accounts-add-account-dialog.c
@@ -238,12 +238,13 @@ goa_panel_add_account_dialog_init (GoaPanelAddAccountDialog *add_account)
   GtkWidget *label;
   GtkWidget *sw;
   GtkWidget *vbox;
+  GtkWidget *grid;
   gchar *markup;
 
   add_account->priv = GOA_ADD_ACCOUNT_DIALOG_GET_PRIVATE (add_account);
   priv = add_account->priv;
 
-  gtk_container_set_border_width (GTK_CONTAINER (add_account), 12);
+  gtk_container_set_border_width (GTK_CONTAINER (add_account), 6);
   gtk_window_set_modal (GTK_WINDOW (add_account), TRUE);
   gtk_window_set_resizable (GTK_WINDOW (add_account), FALSE);
   /* translators: This is the title of the "Add Account" dialogue.
@@ -251,21 +252,28 @@ goa_panel_add_account_dialog_init (GoaPanelAddAccountDialog *add_account)
   gtk_window_set_title (GTK_WINDOW (add_account), _("Add Account"));
 
   vbox = gtk_dialog_get_content_area (GTK_DIALOG (add_account));
-  gtk_box_set_spacing (GTK_BOX (vbox), 12);
+  grid = gtk_grid_new ();
+  gtk_container_set_border_width (GTK_CONTAINER (grid), 5);
+  gtk_widget_set_margin_bottom (grid, 6);
+  gtk_orientable_set_orientation (GTK_ORIENTABLE (grid), GTK_ORIENTATION_VERTICAL);
+  gtk_grid_set_row_spacing (GTK_GRID (grid), 12);
+  gtk_container_add (GTK_CONTAINER (vbox), grid);
 
   label = gtk_label_new (NULL);
   markup = g_strconcat ("<b>", _("Add Account"), "</b>", NULL);
   gtk_label_set_markup (GTK_LABEL (label), markup);
   g_free (markup);
   gtk_misc_set_alignment (GTK_MISC (label), 0.0, 0.5);
-  gtk_box_pack_start (GTK_BOX (vbox), label, FALSE, FALSE, 0);
+  gtk_container_add (GTK_CONTAINER (grid), label);
 
   priv->list_store = gtk_list_store_new (N_COLUMNS, GOA_TYPE_PROVIDER, G_TYPE_ICON, G_TYPE_STRING);
 
   sw = gtk_scrolled_window_new (NULL, NULL);
   gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (sw), GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
   gtk_scrolled_window_set_shadow_type (GTK_SCROLLED_WINDOW (sw), GTK_SHADOW_IN);
-  gtk_box_pack_start (GTK_BOX (vbox), sw, TRUE, TRUE, 0);
+  gtk_widget_set_hexpand (sw, TRUE);
+  gtk_widget_set_vexpand (sw, TRUE);
+  gtk_container_add (GTK_CONTAINER (grid), sw);
 
   priv->tree_view = gtk_tree_view_new ();
   gtk_widget_set_hexpand (priv->tree_view, TRUE);
